UCL-325 Minor spacing fixes

--- a/src/components/Form/Checkbox/Checkbox.module.scss
+++ b/src/components/Form/Checkbox/Checkbox.module.scss
@@ -37,7 +37,7 @@
 
 .checkbox-list {
   padding: 0;
-  margin: 1.25rem 0 0 1.75rem;
+  margin: 1rem 0 0 1.75rem;
   list-style: none;
 
   li + li {
