--- a/src/components/Form/Radio/Radio.module.scss
+++ b/src/components/Form/Radio/Radio.module.scss
@@ -50,7 +50,7 @@
     user-select: none;
     font-size: var(--font-size-form-label);
     font-family: var(--font-family);
-    margin-top: 0.1rem;
+    margin-top: 0.15rem;
 
     .disabled & {
       cursor: not-allowed;
